@@ -1,0 +1,4 @@
+files_DATA = \
+	debian_ipchains
+
+EXTRA_DIST = $(files_DATA)
